content/stylesheet/application.css
/* ... */
div.bio p {
  text-align:center;
  position: absolute;
  bottom: -10px;
  width:100%;
  display:block;
  color:#fff;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 600;
  background-color: rgba(0,0,0,0.5);
  padding: 5px 0px;
}

#vineet {
  background-image: url('/images/about-vineet-hero.jpg');
  background-position: -60px -15px;
}

#james {
  background-image: url('/images/about-james-hero.jpg');
  background-position: -70px -25px;
}

#manuel {
  background-image: url('/images/about-manuel-hero.jpg');
  background-position: -85px -5px;
}

#cecilia {
  background-image: url('/images/about-cecilia-hero.jpg');
  background-position: -75px 0px;
}

#krista {
  background-image: url('/images/about-krista-hero.jpg');
  background-position: -88px -20px;
}

#greg {
  background-image: url('/images/about-greg-hero.jpg');
  background-position: -95px 0px;
}

#patricia {
  background-image: url('/images/about-patricia-hero.jpg');
  background-position: -45px -10px;
}

#nic {
  background-image: url('/images/about-nic-hero.jpg');
  background-position: -80px 0px;
}

#aditya {
  background-image: url('/images/about-aditya-hero.jpg');
  background-position: -85px -10px;
}

#daniel {
  background-image: url('/images/about-daniel-hero.jpg');
  background-position: -10px -9px;
  background-size: 250px;
}

#bruno {
  background-image: url('/images/about-bruno-hero.jpg');
  background-position: -146px -111px;
  background-size: 731px;
}

p.bod {
  color:#444;
  font-size: 16px;
  line-height:140%;
}

.board-container {
  margin: 50px;
}

.modal-content {
  background-color: #fff;
}

span.bod-link {
  color:#aaa;
  float:right;
}

#values-hero {
  background-image: url('/images/values-hero.jpg');
  background-size:cover !important;
  background-attachment:fixed;
  background-position: center center;
  height:100%;
}

#values-container {
  border-top: 1px solid rgba(255,255,255,0.25);
  background-image: url('/images/values-hero-blur.jpg');
  background-size:cover !important;
  background-attachment:fixed;
  background-position: center center;
  background-color: rgba(0,0,0,0.75);
  padding: 100px 0px;
}

#values-container .row {
  margin-bottom: 25px;
}

#values-container h2.about {
  margin-top: 15px;
}

.value {
  width: 600px;
  margin:100px auto;
}

.value-icon-container {
  opacity: 0.6;
  transition: all 0.25s ease-in-out;
}

.value-icon-container:hover {
  opacity: 1;
}

.value-icon-container img {
  width:80%;
  display:block;
  margin:0px auto;
  position:relative;
}

.value-icon-container p {
  text-align: center;
  width: 100%;
  display: block;
  color: #fff;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-weight: 600;
  padding: 5px 0px;
  margin: 5px auto;
  font-size: 12px;
}

p.purpose-bio {
  font-size: 22px;
  color:#fff;
  font-weight: 300;
}

h3.bod-name {
  font-size: 24px;
  font-weight: 100;
  color:#fff;
  margin-bottom:5px;
}

h3.bod-title {
  margin-bottom: 5px;
  margin-top: 0px;
  color:#bbb;
  text-transform: uppercase;
  letter-spacing: 2px;
  font-size: 12px;
  font-weight:500;
  line-height:140%;
}

a.read-bio {
  font-weight: 600;
  font-size: 14px;
}

a.read-bio .glyphicon{
  font-size: 12px;
  margin-left: 5px;
}

.bio-collapse {
  color:#eee;

  -webkit-margin-collapse: separate;
}

.bio-collapse p {
  margin: 25px 0px;
}

/* ============================
   Section 11 - Blog
   ============================ */

body#welcome-blog .container {
  max-width: 750px;
}

#blog-hero {
  background-image: url('/images/blog-hero.jpg');
  background-size:cover !important;
  background-attachment:fixed;
  background-position: center bottom;
  height:650px;
  }

#blog-body {
  background-image: url('/images/blog-hero-blurred.jpg');
  background-size:cover !important;
  background-attachment:fixed;
  background-position: center bottom;
  border-top: 1px solid rgba(255,255,255,0.25);
   }

ol.tumblr_posts {
  list-style: none;
  padding: 0px;
  margin: 100px 0px;
}

li.tumblr_post {
  padding: 30px;
  background: #fff;
  border-radius: 4px;
  overflow: hidden;
  position: relative;
  -webkit-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.60);
  -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.60);
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.60);
  background-clip: padding-box;
  margin-bottom: 25px;
}

.tumblr_title {
  font-size: 24px;
  font-weight: 300;
  text-transform: uppercase;
  letter-spacing: 2px;
  border-bottom: 1px solid #ccc;
  margin-bottom: 25px;
  color:#ccc;
}

.tumblr_body p, .tumblr_body span {
  font-family: "ff-tisa-web-pro", serif !important;
  font-size: 20px;
  line-height:150%;
}

